# marimo-job-scraper

./: .gitignore  README.md  pyproject.toml  pytest.ini
src/marimo_job_scraper/: __init__.py  main.py
src/marimo_job_scraper/scrapers/: __init__.py  abstract_job_scraper.py  python_jobs_github_scraper.py
src/marimo_job_scraper/utils/: __init__.py  httpclient.py
tests/: conftest.py  test_httpclient.py  test_python_jobs_github_scraper.py
tests/fixtures/: pythonjobsgithub_sample.html  sample_html_fixture_creator.py
