[project]
name = "marimo-job-scraper"
version = "0.1.0"
description = "Simple job scraper using marimo"
readme = "README.md"
authors = [
    { name = "rajdeep-sandhu", email = "168480080+rajdeep-sandhu@users.noreply.github.com" }
]
requires-python = ">=3.13.5"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "marimo>=0.14.17",
    "requests>=2.32.5",
]

[project.scripts]
marimo-job-scraper = "marimo_job_scraper.main:main"

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "python-lsp-server>=1.13.0",
    "ruff>=0.12.9",
]
